Updated the font sizes, widths and positions of the about me elements. Changed the fr units back to % due to overflow bug.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ body {
 #home {
   height: inherit;
   display: grid;
-  grid: 5rem repeat(3, auto)/ 1fr;
+  grid: 5rem repeat(3, auto)/ 100%;
   grid-template-areas:
   "nav"
   "header"
@@ -290,7 +290,7 @@ body {
   animation: wiggle .2s ease-in-out;
 }
 
-/*----------------- GLOBAL SITE LAYOUTS -----------------*/
+/*----------------- SHARED SITE LAYOUTS -----------------*/
 
 #about, #work, #services, 
 #gallery, #contact {
@@ -329,7 +329,7 @@ body {
 /*-------------------- ABOUT PAGE --------------------*/
 
 #about {
-  grid: 5rem repeat(3, auto) / 1fr 8fr 1fr;
+  grid: 5rem repeat(3, auto) / 10% 80% 10%;
   grid-template-areas:
   "nav    nav    nav   "
   "header header header"
@@ -350,10 +350,10 @@ body {
 
 .about-img img {
   width: 100%;
-  max-width: 540px;
+  max-width: 640px;
   min-width: 288px;
   height: auto;
-  max-height: 540px;
+  max-height: 640px;
   border-radius: 5px;
 }
 
@@ -365,14 +365,14 @@ body {
   padding-top: 32px;
   color: var(--clr-secondary);
   font-family: var(--ff-primary);
-  font-size: calc(.8rem + 1vw);
+  font-size: .9rem;
   letter-spacing: 1px;
 }
 
 /*----------------------- WORK PAGE -----------------------*/
 
 #work {
-  grid: 5rem repeat(4, auto) 5rem repeat(2, auto) / .25fr 9.5fr .25fr;
+  grid: 5rem repeat(4, auto) 5rem repeat(2, auto) / 5% 90% 5%;
   grid-template-areas:
   "nav    nav     nav   "
   "header header  header"
@@ -380,7 +380,7 @@ body {
   ".....  divider ......"
   ".....  records ......"
   ".....  ......  ......"
-  "title title     title"
+  "title  title   title"
   "quotes quotes  quotes"
   ;
 }
@@ -506,7 +506,7 @@ body {
 /*----------------------- SERVICES PAGE -----------------------*/
 
 #services {
-  grid: 5rem repeat(2, auto) / .25fr 9.5fr .25fr;
+  grid: 5rem repeat(2, auto) / 5% 90% 5%;
   grid-template-areas:
   "nav    nav      nav   "
   "header header   header"
@@ -622,7 +622,7 @@ body {
 /*----------------------- GALLERY PAGE -----------------------*/
 
 #gallery {
-  grid: 5rem repeat(2, auto) / .25fr 9.5fr .25fr;
+  grid: 5rem repeat(2, auto) / 5% 90% 5%;
   grid-template-areas:
   "nav    nav      nav   "
   "header header   header"
@@ -685,7 +685,7 @@ body {
 /*----------------------- CONTACT PAGE -----------------------*/
 
 #contact {
-  grid: 5rem repeat(2, auto) / .25fr 9.5fr .25fr;
+  grid: 5rem repeat(2, auto) / 5% 90% 5%;
   grid-template-areas:
   "nav    nav      nav   "
   "header header   header"
@@ -919,6 +919,10 @@ button[type="submit"]:active {
   .home-quotes blockquote {
     font-size: calc(1rem + .25vw);
   }
+
+  .about-main {
+    font-size: calc(.9rem + .25vw);
+  }
 }
 
 @media (min-width: 425px) {
@@ -942,6 +946,10 @@ button[type="submit"]:active {
 @media (min-width: 475px) {
   .home-quotes blockquote {
     font-size: calc(1.25rem + .25vw);
+  }
+
+  .about-main {
+    font-size: calc(1rem + .25vw);
   }
 
   .service {
@@ -1002,19 +1010,15 @@ button[type="submit"]:active {
   }
 
   .home-quotes blockquote {
-    font-size: calc(1.5rem + .25vw);
+    font-size: calc(1.35rem + .25vw);
   }
-
+  
   .home-btn {
     width: calc(16rem + 5vw);
   }
 
   .home-btn a {
     width: calc(6.5rem + 1vw);
-  }
-
-  .about-main {
-    font-size: 1.2rem;
   }
 
   .review {
@@ -1111,12 +1115,12 @@ button[type="submit"]:active {
 
   .about-title, .work-title, .services-title, 
   .gallery-title, .contact-title {
-    font-size: 2.8rem;
+    font-size: calc(2rem + .5vw);
   }
 
   .about-subtitle, .work-subtitle, .services-subtitle, 
   .gallery-subtitle, .contact-subtitle {
-    font-size: 1.5rem;
+    font-size: calc(.9rem + .5vw);
   }
 
   .about-main {
@@ -1129,7 +1133,7 @@ button[type="submit"]:active {
   }
 
   #gallery {
-    grid: 80px repeat(2, auto) / 1fr 90% 1fr;
+    grid: 80px repeat(2, auto) / .5fr 9fr .5fr;
     grid-template-areas:
     "nav    nav      nav   "
     "header header   header"
@@ -1152,8 +1156,12 @@ button[type="submit"]:active {
   }
 
   .home-quotes blockquote {
-    font-size: calc(1.75rem + .25vw);
+    font-size: calc(1.5rem + .25vw);
     padding-right: 8px;
+  }
+
+  .about-main {
+    font-size: calc(1.15rem + .25vw);
   }
 
   #bq1 {
@@ -1175,12 +1183,12 @@ button[type="submit"]:active {
 
   .about-title, .work-title, .services-title, 
   .gallery-title, .contact-title {
-    font-size: 3rem;
+    font-size: calc(2.5rem + .5vw);
   }
 
   .about-subtitle, .work-subtitle, .services-subtitle, 
   .gallery-subtitle, .contact-subtitle {
-    font-size: 1.75rem;
+    font-size: calc(1.25rem + .5vw);
   }
 
   .review-title {
@@ -1214,7 +1222,11 @@ button[type="submit"]:active {
   }
 
   .home-quotes blockquote {
-    font-size: calc(2rem + .25vw);
+    font-size: calc(1.75rem + .25vw);
+  }
+
+  .about-main {
+    font-size: calc(1.3rem + .25vw);
   }
 
   .home-btn a {
@@ -1250,6 +1262,16 @@ button[type="submit"]:active {
   
   .home-subtitle{
     font-size: calc(2.5rem + .5vw);
+  }
+
+  .about-title, .work-title, .services-title, 
+  .gallery-title, .contact-title {
+    font-size: calc(3rem + .5vw);
+  }
+
+  .about-subtitle, .work-subtitle, .services-subtitle, 
+  .gallery-subtitle, .contact-subtitle {
+    font-size: calc(1.5rem + .5vw);
   }
 
   #about {
